<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geo Tagger</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tagging">TaggingActivity</string>
    <string name="question1">What main type of activity did you do at this location?</string>
    <string name="question2">What else did you do? Who did you work with?</string>
    <string name="question3">Please give a brief description about this location or activity</string>
    <string name="question3_sub">(Languages spoken? Spiritual or physical needs? Future ministry opportunities? Openness to the Gospel?)</string>
    <string name="question4">What other keywords would be fitting for this location/activity?</string>
    <string name="question4_sub">Separate words by comma. (Ex: water access, intercessory prayer, children education)</string>
    <string name="question5">Please include any contact info for future ministry activities.</string>
    <string name="question5_sub">Did the person or the organization agree to share this contact with others? If so, please check it.</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Add">Add</string>
    <string name="Locate">Locate</string>
    <string name="Tag">Tag</string>
    <string name="History">History</string>
    <string name="Setting">Settings</string>
    <string name="Photo">Photo</string>
    <string name="Take_Photo">Take Photo</string>
    <string name="Select_Photo">Select Photo</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Website">Website</string>
    <string name="Add_Location">Add Location</string>
    <string name="q1_1">Evangelism</string>
    <string name="q1_2">Training</string>
    <string name="q1_3">Mercy</string>
    <string name="q2_1">Youth / Children</string>
    <string name="q2_2">Campus Ministry</string>
    <string name="q2_3">Indigenous People</string>
    <string name="q2_4">Prison Ministry</string>
    <string name="q2_5">Prostitutes</string>
    <string name="q2_6">Orphans</string>
    <string name="q2_7">Womans</string>
    <string name="q2_8">Urban Ministry</string>
    <string name="q2_9">Hospital Ministry</string>
    <string name="q2_10">Media / Communications</string>
    <string name="q2_11">Community Development</string>
    <string name="q2_12">Bible Studies</string>
    <string name="q2_13">Church Planting</string>
    <string name="q2_14">Arts / Entertainment / Sports</string>
    <string name="q2_15">Counseling</string>
    <string name="q2_16">Healthcare</string>
    <string name="q2_17">Maintenance / Construction</string>
    <string name="q2_18">Research</string>
    <string name="Data_History">Data History</string>
    <string name="Offline_Mode">Offline Mode</string>
    <string name="User_Information">User Information</string>
    <string name="Edit_User_Info">Edit User Info</string>
    <string name="username">username:</string>
    <string name="app_key">api key:</string>
    <string name="You_need_to_sync">You need to sync 1 data.</string>
    <string name="Sync_Data">Sync Data</string>
    <string name="title_activity_tag">TagActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="auth_error">Authentication Error</string>
    <string name="apikey_missing">Username or Api Key is Missing!!</string>
    <string name="apikey_invalid">Username or Api Key is Invalid!!</string>
    <string name="offline_loc_info">Map is not displayed in Offline Mode</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
</resources>
