<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.msk.geotagger.fragments.SettingsFragment"
    android:id="@+id/container">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:id="@+id/relativeLayout">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Setting"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Offline_Mode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <CheckBox
                    android:id="@+id/chkOffline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/User_Information"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txtEditUserInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Edit_User_Info"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2222ee"
                    android:layout_weight="1"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2222ee"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etUsername"
                    android:enabled="false"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_key"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2222ee"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etApiKey"
                    android:enabled="false"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/txtSyncData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/You_need_to_sync"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ff0000"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/sync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sync_Data"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2222ee"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="right" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</FrameLayout>
